fix alignment of cookie consent label

--- a/wp-content/themes/wpgeorgetown-2018/assets/scss/partials/_content-area.scss
+++ b/wp-content/themes/wpgeorgetown-2018/assets/scss/partials/_content-area.scss
@@ -228,7 +228,8 @@
 			font-weight: 700;
 			margin-right: 12px;
 
-			&[for="subscribe"] {
+			&[for="subscribe"],
+			&[for="wp-comment-cookies-consent"] {
 				display: inline-block;
 			}
 		}
